# garmin-sleep-dashboard

./: .gitignore  AGENTS.md  README.md  justfile  manage.py  pyproject.toml
config/: env.py  settings.py  urls.py
sleep/: admin.py  apps.py  converters.py  models.py  urls.py  views.py
sleep/management/commands/: garmin_login.py  import_zip.py  sync_garmin.py
sleep/migrations/: 0001_initial.py
sleep/services/: garmin_api.py  store.py
sleep/templates/sleep/: setup.html
src/garmin_sleep/: analysis.py  cli.py  metrics.py  models.py  parser.py  report.py  server.py  tips.py
src/garmin_sleep/templates/: dashboard.html
tests/: conftest.py  test_env.py  test_garmin_api.py  test_metrics.py  test_parser.py  test_report.py  test_settings.py  test_store.py  test_tips.py  test_views.py
